调整显示, 修注册

--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -258,11 +258,12 @@
     <property name="font">
      <font>
       <family>华文楷体</family>
-      <pointsize>18</pointsize>
+      <pointsize>10</pointsize>
+      <bold>true</bold>
      </font>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
@@ -431,6 +432,7 @@
        <font>
         <family>华文楷体</family>
         <pointsize>12</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="columnCount">
@@ -518,6 +520,7 @@
        <font>
         <family>华文楷体</family>
         <pointsize>12</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="text">
@@ -537,6 +540,7 @@
        <font>
         <family>华文楷体</family>
         <pointsize>12</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="text">
@@ -550,63 +554,136 @@
        <rect>
         <x>40</x>
         <y>30</y>
-        <width>491</width>
-        <height>291</height>
+        <width>490</width>
+        <height>290</height>
        </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>华文楷体</family>
+        <pointsize>10</pointsize>
+        <bold>true</bold>
+       </font>
       </property>
       <column>
        <property name="text">
         <string>订单号</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>用户名</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>航班号</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>乘客姓名</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>乘客身份证号</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>出发地</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>起飞时间</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>目的地</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>到达时间</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>票价</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>下单时间</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
      </widget>
@@ -623,6 +700,7 @@
        <font>
         <family>华文楷体</family>
         <pointsize>12</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <item>
@@ -646,53 +724,108 @@
      <widget class="QTableWidget" name="twUserList">
       <property name="geometry">
        <rect>
-        <x>40</x>
+        <x>20</x>
         <y>30</y>
-        <width>491</width>
-        <height>192</height>
+        <width>610</width>
+        <height>260</height>
        </rect>
       </property>
+      <property name="font">
+       <font>
+        <family>华文楷体</family>
+        <pointsize>14</pointsize>
+        <bold>false</bold>
+       </font>
+      </property>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>30</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>30</number>
+      </attribute>
       <column>
        <property name="text">
         <string>用户名</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>密码</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>手机号</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>邮箱</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>真实姓名</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
       <column>
        <property name="text">
         <string>身份证号</string>
        </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
       </column>
       <column>
        <property name="text">
         <string>账户余额</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
        </property>
       </column>
      </widget>
      <widget class="QComboBox" name="cbUserOperation">
       <property name="geometry">
        <rect>
-        <x>550</x>
-        <y>30</y>
+        <x>545</x>
+        <y>310</y>
         <width>83</width>
         <height>25</height>
        </rect>
@@ -701,6 +834,7 @@
        <font>
         <family>华文楷体</family>
         <pointsize>12</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <item>
@@ -743,6 +877,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -772,6 +907,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -801,6 +937,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -830,6 +967,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -849,6 +987,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -878,6 +1017,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -907,6 +1047,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
@@ -936,6 +1077,7 @@
         <font>
          <family>华文楷体</family>
          <pointsize>14</pointsize>
+         <bold>true</bold>
         </font>
        </property>
        <property name="text">
