--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -263,7 +263,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
@@ -272,7 +272,7 @@
         <x>110</x>
         <y>40</y>
         <width>410</width>
-        <height>130</height>
+        <height>141</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -344,7 +344,7 @@
       <widget class="QSpinBox" name="yearSpin">
        <property name="geometry">
         <rect>
-         <x>121</x>
+         <x>110</x>
          <y>70</y>
          <width>71</width>
          <height>25</height>
@@ -365,7 +365,7 @@
         <rect>
          <x>220</x>
          <y>70</y>
-         <width>51</width>
+         <width>61</width>
          <height>25</height>
         </rect>
        </property>
@@ -382,9 +382,9 @@
       <widget class="QSpinBox" name="daySpin">
        <property name="geometry">
         <rect>
-         <x>300</x>
+         <x>320</x>
          <y>70</y>
-         <width>51</width>
+         <width>61</width>
          <height>25</height>
         </rect>
        </property>
@@ -416,6 +416,19 @@
          <width>85</width>
          <height>25</height>
         </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="findBtn">
+       <property name="geometry">
+        <rect>
+         <x>165</x>
+         <y>110</y>
+         <width>81</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>查  询</string>
        </property>
       </widget>
      </widget>
