更新：修改了数据库（订单表加了状态，航班表加了样例）实现管理员端订单查看（有个小问题，订单号不太对劲）

--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -699,6 +699,17 @@
         </font>
        </property>
       </column>
+      <column>
+       <property name="text">
+        <string>状态</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
+      </column>
      </widget>
      <widget class="QComboBox" name="cbOrderStatus">
       <property name="geometry">
