--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -263,16 +263,16 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>3</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>40</y>
-        <width>410</width>
-        <height>141</height>
+        <x>109</x>
+        <y>20</y>
+        <width>411</width>
+        <height>151</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -363,7 +363,7 @@
       <widget class="QSpinBox" name="monthSpin">
        <property name="geometry">
         <rect>
-         <x>220</x>
+         <x>210</x>
          <y>70</y>
          <width>61</width>
          <height>25</height>
@@ -382,7 +382,7 @@
       <widget class="QSpinBox" name="daySpin">
        <property name="geometry">
         <rect>
-         <x>320</x>
+         <x>300</x>
          <y>70</y>
          <width>61</width>
          <height>25</height>
@@ -421,14 +421,80 @@
       <widget class="QPushButton" name="findBtn">
        <property name="geometry">
         <rect>
-         <x>165</x>
+         <x>160</x>
          <y>110</y>
-         <width>81</width>
-         <height>21</height>
+         <width>91</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
         <string>查  询</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="departureTimeLabel_2">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>70</y>
+         <width>21</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>华文琥珀</family>
+         <pointsize>13</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>年</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="departureTimeLabel_3">
+       <property name="geometry">
+        <rect>
+         <x>270</x>
+         <y>70</y>
+         <width>21</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>华文琥珀</family>
+         <pointsize>13</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>月</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="departureTimeLabel_4">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>70</y>
+         <width>21</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>华文琥珀</family>
+         <pointsize>13</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>日</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignmentFlag::AlignCenter</set>
        </property>
       </widget>
      </widget>
@@ -436,9 +502,9 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>210</y>
+        <y>189</y>
         <width>600</width>
-        <height>280</height>
+        <height>301</height>
        </rect>
       </property>
       <property name="font">
@@ -565,10 +631,10 @@
      <widget class="QTableWidget" name="twOrderList">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>30</y>
-        <width>490</width>
-        <height>290</height>
+        <x>20</x>
+        <y>60</y>
+        <width>611</width>
+        <height>471</height>
        </rect>
       </property>
       <property name="font">
@@ -714,9 +780,9 @@
      <widget class="QComboBox" name="cbOrderStatus">
       <property name="geometry">
        <rect>
-        <x>550</x>
-        <y>30</y>
-        <width>83</width>
+        <x>20</x>
+        <y>20</y>
+        <width>101</width>
         <height>25</height>
        </rect>
       </property>
@@ -751,7 +817,7 @@
         <x>20</x>
         <y>30</y>
         <width>610</width>
-        <height>260</height>
+        <height>411</height>
        </rect>
       </property>
       <property name="font">
@@ -851,10 +917,10 @@
      <widget class="QPushButton" name="deleteUserBtn">
       <property name="geometry">
        <rect>
-        <x>545</x>
-        <y>310</y>
-        <width>83</width>
-        <height>25</height>
+        <x>280</x>
+        <y>460</y>
+        <width>91</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="font">
