--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -263,7 +263,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
@@ -436,7 +436,7 @@
         <rect>
          <x>180</x>
          <y>70</y>
-         <width>21</width>
+         <width>31</width>
          <height>31</height>
         </rect>
        </property>
@@ -458,7 +458,7 @@
         <rect>
          <x>270</x>
          <y>70</y>
-         <width>21</width>
+         <width>31</width>
          <height>31</height>
         </rect>
        </property>
@@ -480,7 +480,7 @@
         <rect>
          <x>360</x>
          <y>70</y>
-         <width>21</width>
+         <width>31</width>
          <height>31</height>
         </rect>
        </property>
@@ -935,443 +935,7 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="page_4">
-     <widget class="QWidget" name="widget" native="true">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>-1</y>
-        <width>650</width>
-        <height>130</height>
-       </rect>
-      </property>
-      <widget class="QLabel" name="FilterLabel">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>25</y>
-         <width>100</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>时间筛选：</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="cbStartYear">
-       <property name="geometry">
-        <rect>
-         <x>140</x>
-         <y>25</y>
-         <width>80</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="startYearLabel">
-       <property name="geometry">
-        <rect>
-         <x>220</x>
-         <y>27</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>年</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="cbStartMonth">
-       <property name="geometry">
-        <rect>
-         <x>250</x>
-         <y>25</y>
-         <width>80</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="startMonthLabel">
-       <property name="geometry">
-        <rect>
-         <x>330</x>
-         <y>27</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>月</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="cbStartDay">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>25</y>
-         <width>80</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="startDayLabel">
-       <property name="geometry">
-        <rect>
-         <x>440</x>
-         <y>27</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>日</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="dateToLabel_2">
-       <property name="geometry">
-        <rect>
-         <x>280</x>
-         <y>60</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>至</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="cbEndYear">
-       <property name="geometry">
-        <rect>
-         <x>140</x>
-         <y>85</y>
-         <width>80</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="endYearLabel">
-       <property name="geometry">
-        <rect>
-         <x>220</x>
-         <y>87</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>年</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="cbEndMonth">
-       <property name="geometry">
-        <rect>
-         <x>250</x>
-         <y>85</y>
-         <width>80</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="endMonthLabel">
-       <property name="geometry">
-        <rect>
-         <x>330</x>
-         <y>87</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>月</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="cbEndDay">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>85</y>
-         <width>80</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="endDayLabel">
-       <property name="geometry">
-        <rect>
-         <x>440</x>
-         <y>87</y>
-         <width>20</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文楷体</family>
-         <pointsize>14</pointsize>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>日</string>
-       </property>
-      </widget>
-     </widget>
-     <widget class="Line" name="horizontalLine_page_4">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>120</y>
-        <width>651</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
-      </property>
-     </widget>
-     <widget class="QFrame" name="frame">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>180</y>
-        <width>210</width>
-        <height>110</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QFrame { background-color: #1E90FF; color: white; border-radius: 5px; padding: 5px; }</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::Shape::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Shadow::Raised</enum>
-      </property>
-      <widget class="QLabel" name="lbTotalFlightsTitle">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>20</y>
-         <width>100</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文琥珀</family>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>总航班数：</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="leTotalFlights">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>65</y>
-         <width>115</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QFrame" name="frame_2">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>180</y>
-        <width>210</width>
-        <height>110</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QFrame { background-color: #1E90FF; color: white; border-radius: 5px; padding: 5px; }</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::Shape::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Shadow::Raised</enum>
-      </property>
-      <widget class="QLabel" name="lbTotalOrdersTitle">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>20</y>
-         <width>100</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文琥珀</family>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>总订单数：</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="leTotalOrders">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>65</y>
-         <width>115</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QFrame" name="frame_3">
-      <property name="geometry">
-       <rect>
-        <x>70</x>
-        <y>360</y>
-        <width>210</width>
-        <height>110</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QFrame { background-color: #1E90FF; color: white; border-radius: 5px; padding: 5px; }</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::Shape::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Shadow::Raised</enum>
-      </property>
-      <widget class="QLabel" name="lbTotalUsersTitle">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>20</y>
-         <width>100</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文琥珀</family>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>总用户数：</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="leTotalUsers">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>65</y>
-         <width>115</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QFrame" name="frame_4">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>360</y>
-        <width>210</width>
-        <height>110</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QFrame { background-color: #1E90FF; color: white; border-radius: 5px; padding: 5px; }</string>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::Shape::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Shadow::Raised</enum>
-      </property>
-      <widget class="QLabel" name="lbTotalAmountTitle">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>20</y>
-         <width>120</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <family>华文琥珀</family>
-         <pointsize>14</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>订单总金额：</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="leTotalAmount">
-       <property name="geometry">
-        <rect>
-         <x>50</x>
-         <y>65</y>
-         <width>115</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
-    </widget>
+    <widget class="QWidget" name="page_4"/>
    </widget>
   </widget>
  </widget>
