--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -263,7 +263,7 @@
      </font>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="page_1">
      <widget class="QFrame" name="frameFilter">
@@ -932,7 +932,7 @@
      <widget class="QPushButton" name="deleteUserBtn">
       <property name="geometry">
        <rect>
-        <x>290</x>
+        <x>350</x>
         <y>480</y>
         <width>91</width>
         <height>31</height>
@@ -955,6 +955,34 @@
       </property>
       <property name="text">
        <string>删除</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="deleteUserBtn_2">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>480</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>华文楷体</family>
+        <pointsize>12</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton {
+    background-color:#e6e6e6;
+    color: black;
+    border: 1px solid #ababab;
+    border-radius: 12px;
+}</string>
+      </property>
+      <property name="text">
+       <string>编辑</string>
       </property>
      </widget>
     </widget>
