--- a/FlightItemWidget.ui
+++ b/FlightItemWidget.ui
@@ -61,7 +61,7 @@
 }</string>
     </property>
     <property name="text">
-     <string>预订</string>
+     <string>购买</string>
     </property>
    </widget>
    <widget class="QPushButton" name="collectBtn">
@@ -301,7 +301,7 @@
      <rect>
       <x>400</x>
       <y>20</y>
-      <width>90</width>
+      <width>102</width>
       <height>121</height>
      </rect>
     </property>
