--- a/AdminMainWindow.ui
+++ b/AdminMainWindow.ui
@@ -283,7 +283,7 @@
        </font>
       </property>
       <property name="columnCount">
-       <number>13</number>
+       <number>11</number>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
        <number>100</number>
@@ -343,16 +343,6 @@
         <string>剩余座位（实时更新）</string>
        </property>
       </column>
-      <column>
-       <property name="text">
-        <string>编辑</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>删除</string>
-       </property>
-      </column>
      </widget>
      <widget class="QPushButton" name="editBtn">
       <property name="geometry">
@@ -407,6 +397,7 @@
        <font>
         <family>华文琥珀</family>
         <pointsize>10</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -1930,7 +1921,7 @@ border: none; /* 移除边框 */</string>
        </property>
        <property name="geometry">
         <rect>
-         <x>230</x>
+         <x>235</x>
          <y>110</y>
          <width>120</width>
          <height>30</height>
