--- a/FlightItemWidget.ui
+++ b/FlightItemWidget.ui
@@ -40,7 +40,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>502</x>
       <y>40</y>
       <width>70</width>
       <height>30</height>
@@ -70,7 +70,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>502</x>
       <y>90</y>
       <width>70</width>
       <height>30</height>
@@ -534,7 +534,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="figures.qrc">:/img/source/figures/AirChina.png</pixmap>
+     <pixmap resource="airlinelogos.qrc">:/img/source/airlinelogos/CA.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -573,6 +573,7 @@
  </widget>
  <resources>
   <include location="figures.qrc"/>
+  <include location="airlinelogos.qrc"/>
  </resources>
  <connections/>
 </ui>
