--- a/UserMainWindow.ui
+++ b/UserMainWindow.ui
@@ -975,6 +975,9 @@
        <property name="maximum">
         <number>2050</number>
        </property>
+       <property name="value">
+        <number>2026</number>
+       </property>
       </widget>
       <widget class="QSpinBox" name="monthSpin">
        <property name="geometry">
@@ -1904,7 +1907,7 @@ border: none; /* 移除边框 */</string>
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>98</width>
+         <width>611</width>
          <height>600</height>
         </rect>
        </property>
@@ -1950,7 +1953,7 @@ border: none; /* 移除边框 */</string>
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>98</width>
+         <width>611</width>
          <height>600</height>
         </rect>
        </property>
